--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -12,12 +12,15 @@
         </title>
 
 		<script src="{{ STATIC_URL }}/static/js/jquery-1.8.2.min.js" type="text/javascript"></script>
-
+		<link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/style.css" />
         <style type="text/css" media="print">
-            div.no_print {display: none; }
+            div.no_print {display: none;}
+        </style>
+        <style type="text/css" media="print">
+            table.no_shadow_print {box-shadow: none;}
+            table.no_shadow_print tr td {font-size: 18px;}
         </style>
 
-		<link rel="stylesheet" href="{{ STATIC_URL }}/static/css/style.css" type="text/css" />
 	</head>
 	
 	<body>
@@ -26,22 +29,22 @@
         <div class="no_print">
 		<div class="header">
 			<ul class="menu-nav">
-				<li class="top item53">
-                    {% if step > 1 %}<a href="{% url mo %}">{% elif step == 1 %}<a href="{% url mo %}" class="current">{% else %}<a>{% endif %}МО</a>
+				<li>
+                    {% if step > 1 %}<a href="{% url mo %}">{% elif step == 1 %}<a class="current">{% else %}<a>{% endif %}МО</a>
 				</li>
-				<li class="top item54">
-                    {% if step > 2 %}<a href="{% url lpu %}">{% elif step == 2 %}<a href="{% url lpu %}" class="current">{% else %}<a>{% endif %}ЛПУ</a>
+				<li>
+                    {% if step > 2 %}<a href="{% url lpu %}">{% elif step == 2 %}<a class="current">{% else %}<a>{% endif %}ЛПУ</a>
 				</li>
-				<li class="top item55">
-                    {% if step > 3 %}<a href="{% url podrazdelenie %}">{% elif step == 3 %}<a href="{% url podrazdelenie %}" class="current">{% else %}<a>{% endif %}Подразделение/Специализация/Врач</a>
-				<li class="top item58">
-                    {% if step > 4 %}<a href="{% url vremya %}">{% elif step == 4 %}<a href="{% url vremya %}" class="current">{% else %}<a>{% endif %}Время</a>
+				<li>
+                    {% if step > 3 %}<a href="{% url podrazdelenie %}">{% elif step == 3 %}<a class="current">{% else %}<a>{% endif %}Подразделение/Специализация/Врач</a>
+				<li>
+                    {% if step > 4 %}<a href="{% url vremya %}">{% elif step == 4 %}<a class="current">{% else %}<a>{% endif %}Время</a>
 				</li>
-                <li class="top item59">
-                    {% if step > 5 %}<a href="">{% elif step == 5 %}<a href="" class="current">{% else %}<a>{% endif %}Пациент</a>
+                <li>
+                    {% if step > 5 %}<a href="{% url pacient %}">{% elif step == 5 %}<a class="current">{% else %}<a>{% endif %}Пациент</a>
                 </li>
-                <li class="top item60">
-                    {% if step > 6 %}<a href="">{% elif step == 6 %}<a href="" class="current">{% else %}<a>{% endif %}Запись</a>
+                <li>
+                    {% if step > 6 %}<a href="">{% elif step == 6 %}<a class="current">{% else %}<a>{% endif %}Запись</a>
                 </li>
 			</ul>	    
 		</div>
