--- a/ElReg/elreg_app/static/css/style.css
+++ b/ElReg/elreg_app/static/css/style.css
@@ -3,6 +3,7 @@
 body, td, th, div, p, label, input {
 	color:#45494a;
 	font:normal 14px/17px Verdana, Arial, Helvetica, sans-serif;
+    text-align: justify;
 }
 
 body {
@@ -101,6 +102,12 @@ ul.menu-nav li a.current:hover  {
 fieldset {
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
+}
+
+/*на странице ЛПУ выравнивание формы*/
+
+fieldset div.searchField {
+    text-align: center;
 }
 
 /*на странице Пациент с формой*/
@@ -220,6 +227,7 @@ table.firstTable:hover, table.secondTable:hover, table.thirdTable:hover {
 
 table.firstTable tr td, table.secondTable tr td, table.thirdTable tr td {
     vertical-align: middle;
+    cursor: pointer;
 }
 
 table.firstTable tr td:hover, table.secondTable tr td:hover, table.thirdTable tr td:hover {
@@ -228,6 +236,46 @@ table.firstTable tr td:hover, table.secondTable tr td:hover, table.thirdTable tr
     -webkit-border-radius: 20px;
     box-shadow: inset 0 0 30px 4px rgba(56, 140, 227, 0.28);
 }
+
+
+
+
+
+.zapis table {
+    background: rgb(255, 255, 255);
+    border: 1px solid #bcbcbc;
+    padding: 10px;
+    width: 100%; /* Ширина таблицы */
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-box-shadow: 0 5px 7px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 5px 7px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.2);
+}
+
+.zapis table tr th {
+    height: 40px;
+    font-weight:bold;
+    text-align: center;
+}
+
+.zapis table tr td {
+    vertical-align: top;
+    padding: 5px;
+    text-align: justify;
+}
+
+.zapis table tr td:first-child {
+    width: 25%;
+}
+
+.zapis table td:hover {
+    color: #000;
+}
+
+
+
+
 
 /*---------------------------------------------------------Формы---*/
 
