Скрипты для динамического поиска переписаны для использования рекурсивного поиска

--- a/ElReg/elreg_app/templates/lpu.html
+++ b/ElReg/elreg_app/templates/lpu.html
@@ -45,11 +45,13 @@
 
 <script type="text/javascript">
     function searchLpu() {
-        var search = $('#search_lpu').val();
-        $.getJSON("/search/", {search: search, flag: "lpu"}, function(data) {
+        var search_lpu = $('#search_lpu').val();
+        var search_gorod = $('#search_gorod').val();
+        var search_rayon = $('#search_rayon').val();
+        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
             var $items = [];
             $.each(data, function(key, val) {
-                $items.push('<tr><td><a href="/podrazdelenie/' + key + '/">' + val + '</a></td></tr>');
+                $items.push('<tr><td><a href="/subdivision/' + key + '/">' + val + '</a></td></tr>');
             });
             $('table.search tr').hide();
             $("#search_table").attr("class", "search");
@@ -58,11 +60,13 @@
     }
 
     function searchGorod() {
-        var search = $('#search_gorod').val();
-        $.getJSON("/search/", {search: search, flag: "gorod"}, function(data) {
+        var search_lpu = $('#search_lpu').val();
+        var search_gorod = $('#search_gorod').val();
+        var search_rayon = $('#search_rayon').val();
+        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
             var $items = [];
             $.each(data, function(key, val) {
-                $items.push('<tr><td><a href="/podrazdelenie/' + key + '/">' + val + '</a></td></tr>');
+                $items.push('<tr><td><a href="/subdivision/' + key + '/">' + val + '</a></td></tr>');
             });
             $('table.search tr').hide();
             $("#search_table").attr("class", "search");
@@ -71,11 +75,13 @@
     }
 
     function searchRayon() {
-        var search = $('#search_rayon').val();
-        $.getJSON("/search/", {search: search, flag: "rayon"}, function(data) {
+        var search_lpu = $('#search_lpu').val();
+        var search_gorod = $('#search_gorod').val();
+        var search_rayon = $('#search_rayon').val();
+        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
             var $items = [];
             $.each(data, function(key, val) {
-                $items.push('<tr><td><a href="/podrazdelenie/' + key + '/">' + val + '</a></td></tr>');
+                $items.push('<tr><td><a href="/subdivision/' + key + '/">' + val + '</a></td></tr>');
             });
             $('table.search tr').hide();
             $("#search_table").attr("class", "search");
