--- a/ElReg/elreg_app/templates/email.html
+++ b/ElReg/elreg_app/templates/email.html
@@ -6,7 +6,7 @@
             <tr align="justify"><td>Дата рождения:</td><td colspan="2">{{ birthday }}</td></tr>
             <tr align="justify"><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
             <tr><th colspan="3" align="center">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
-            <tr align="justify"><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}</td></tr>
+            <tr align="justify"><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }} {{ current_podrazd }}</td></tr>
             <tr align="justify"><td>Врач:</td><td colspan="2">{{ ticketStatus.doctor.lastName }} {{ ticketStatus.doctor.firstName }} {{ ticketStatus.doctor.patronymic }} ({{ prof }})</td></tr>
             <tr align="justify"><td>Дата и время приёма:</td><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
             <tr><th colspan="3" align="center">ВНИМАНИЕ:</th></tr>
