--- a/ElReg/elreg_app/templates/zapis.html
+++ b/ElReg/elreg_app/templates/zapis.html
@@ -6,10 +6,10 @@
 <table class="no_shadow_print">
     <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketStatus.ticketUid }}</th></tr>
     <tr><td>ФИО (Пациент):</td><td colspan="2">{{ pacientName }}</td></tr>
-    <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }}</td></tr>
+    <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }} г.</td></tr>
     <tr><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
     <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
-    <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}</td></tr>
+    <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}. {{  current_podrazd }}</td></tr>
     <tr><td>Врач:</td><td colspan="2">{{ ticketStatus.doctor.lastName }} {{ ticketStatus.doctor.firstName }} {{ ticketStatus.doctor.patronymic }} ({{ prof }})</td></tr>
     <tr><td>Дата и время приёма:</td><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
     <tr><th colspan="3">ВНИМАНИЕ:</th></tr>
